<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhoneMode Manager</string>
    <string name="action_settings">Settings</string>
    <string name="button_map">Map test</string>
    <string name="button_silence">Silence Test</string>
    <string name="button_CallSettings">Call Settings</string>
    <string name="button_back">Back</string>
    <string name="silence_mode">Silence mode</string>
    <string name="event_title">New event</string>
    <string name="event_range">Range (meters):</string>
    <string name="event_type1">Set silent mode:</string>
    <string name="event_type2">Set ringtone:</string>
    <string name="event_type3">Set 3G/WiFi:</string>
    <string name="button_continue">Continue</string>
    <string name="button_delete">Delete</string>
    <string name="tip_range_min">20</string>
    <string name="tip_range_max">200</string>
    <string name="button_save">Save</string>
    <string name="event_setTo">Change to:</string>
    <string name="notSet">NOT SET</string>
    <string name="select">Select</string>
    <string name="service_start">Start Service</string>
    <string name="service_stop">Stop Service</string>
    <string name="title_activity_call_settings">CallSettingsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_contact_list">ContactListActivity</string>
    <string name="save">Save</string>
    <string name="turnOn">Activate Service</string>
    <string name="editWhitelist">Edit contact List</string>
    <string name="disableService">Disable Service</string>
    <string name="serviceRunning">Service Running</string>
    <string name="serviceOff">Service not</string>
    
</resources>
