<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blur_green"
    tools:context=".SetSilentActivity" >

    <TextView
        android:id="@+id/txt_SilentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/silence_mode"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_SilentSave"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onClick_SilentSave"
        android:text="@string/button_save" />

    <Button
        android:id="@+id/btn_SilentBack"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="onClick_SilentBack"
        android:text="@string/button_back" />

    <TextView
        android:id="@+id/txt_SilentSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/btn_SilentBack"
        android:layout_below="@id/txt_SilentTitle"
        android:layout_marginRight="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/event_setTo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/box_SilentSetting"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_below="@id/txt_SilentSet"
        android:layout_centerHorizontal="true" />

</RelativeLayout>