<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blur_blue"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txt_Title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_Map"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_Title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/button_map"
        android:onClick="onClick_Map" />
    
    <Button
        android:id="@+id/btn_CallSettings"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_Map"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/button_CallSettings"
        android:onClick="onClick_CallSettings" />

</RelativeLayout>
